--- a/index.html
+++ b/index.html
@@ -1,18 +1,72 @@
 <!DOCTYPE html>
-<html>
-<link rel="stylesheet" type="text/css" href="main.css">
-<link href="https://fonts.googleapis.com/css?family=Roboto:400,400i" rel="stylesheet">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-  <head>
-    <title>Website Coming Soon!</title>
-  </head>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ABE Travel Company</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
 
-  <body>
-    <div class="viewport">
-      <div class="text-box">
-        <p class="title">Website Coming Soon!</p>
-        <p class="subtitle"><i>Please Check Back Later</i></p>
-      </div>
-    </div>
-  </body>
+    <!-- Header with Logo -->
+    <header class="header">
+        <img src="https://i.ibb.co/Nn1rZPLh/logo2.jpg" alt="ABE Travel Company Logo" class="logo">
+        <h1>ABE Travel Company</h1>
+    </header>
+
+    <!-- Hero Section -->
+    <section class="hero">
+        <h2>Cruise In-Take Form</h2>
+        <p>Fill out the form below and I will get back to you with the best options based on your cruising preferences.</p>
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSfHcrQodBqrN_V7ztOj2PbVb-Wo43g1oNdXieY5KGgJPKosYQ/viewform?usp=header" 
+           target="_blank" class="cta-button">Let's Plan Your Trip</a>
+    </section>
+
+    <!-- Top Cruise Destinations Section -->
+    <section class="destination-section">
+        <h3>Top Cruise Destinations</h3>
+        <p>Sail to breathtaking destinations around the world.</p>
+        <div class="destination-grid">
+            <div class="destination">
+                <h4><a href="https://travel.usnews.com/cruises/best-cruise-lines-in-the-caribbean/" target="_blank">Caribbean</a></h4>
+                <p>Sail through turquoise waters, explore hidden island gems, and experience vibrant tropical cultures on a Caribbean cruise like no other.</p>
+            </div>
+            <div class="destination">
+                <h4><a href="https://travel.usnews.com/features/the-top-alaska-cruise-lines" target="_blank">Alaska</a></h4>
+                <p>Witness breathtaking glaciers, encounter majestic wildlife, and take in the raw beauty of the Last Frontier on an unforgettable Alaskan cruise.</p>
+            </div>
+            <div class="destination">
+                <h4><a href="https://travel.usnews.com/cruises/best-cruise-lines-in-the-mediterranean/" target="_blank">Mediterranean</a></h4>
+                <p>Discover ancient cities, savor world-class cuisine, and cruise along the stunning coastlines of the Mediterranean's most captivating destinations.</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Top All-Inclusive Destinations Section -->
+    <section class="destination-section">
+        <h3>Top All-Inclusive Destinations</h3>
+        <p>Experience world-class luxury with top all-inclusive resorts.</p>
+        <div class="destination-grid">
+            <div class="destination">
+                <h4><a href="https://travel.usnews.com/hotels/best-all-inclusive-resorts-in-mexico/" target="_blank">Mexico</a></h4>
+                <p>Indulge in luxury resorts, explore Mayan ruins, and soak up the sun on Mexico’s world-famous white-sand beaches.</p>
+            </div>
+            <div class="destination">
+                <h4><a href="https://travel.usnews.com/hotels/best-all-inclusive-resorts-in-punta_cana_dominican_republic/" target="_blank">Dominican Republic</a></h4>
+                <p>Enjoy all-inclusive beachfront bliss, lively nightlife, and breathtaking natural beauty in the heart of the Caribbean.</p>
+            </div>
+            <div class="destination">
+                <h4><a href="https://travel.usnews.com/hotels/best-all-inclusive-resorts-in-jamaica/" target="_blank">Jamaica</a></h4>
+                <p>Immerse yourself in reggae rhythms, relax in lush tropical surroundings, and experience the warm hospitality of Jamaica’s finest resorts.</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="footer">
+        &copy; <script>document.write(new Date().getFullYear())</script> ABE Travel Company
+    </footer>
+
+</body>
 </html>
+
