--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!-- Header with Logo -->
     <header class="header">
-        <img src="https://i.ibb.co/Nn1rZPLh/logo2.jpg" alt="ABE Travel Company Logo" class="logo">
+        <img src="logo2.jpg" alt="ABE Travel Company Logo" class="logo">
         <h1>ABE Travel Company</h1>
     </header>
 
